--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   youtube_explode_dart: ^2.4.0
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
